<resources>

    //Strings for bottom navigation bar
    <string name="my_profile_icon">My Profile</string>
    <string name="my_weekly_training_icon">Weekly Training</string>
    <string name="training_history_icon">Training History</string>

    //Strings for activity_main
    <string name="app_name">Train With Me</string>
    <string name="my_profile">MY PROFILE</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="age">Age</string>
    <string name="dd_mm_yyyy">dd/mm/yyyy</string>
    <string name="user_age">User Age</string>
    <string name="height">Height (cm)</string>
    <string name="weight">Weight (kg)</string>
    <string name="bmi">BMI:</string>
    <string name="training_level">Training Level</string>
    <string name="beginner">Beginner</string>
    <string name="advanced">Advanced</string>
    <string name="preferences">My Preferences</string>
    <string name="abs">ABS</string>
    <string name="aerobics">Aerobics</string>
    <string name="core">Core</string>
    <string name="fat_lose">Fat Lose</string>
    <string name="spinning">Spinning</string>
    <string name="trx">TRX</string>
    <string name="save_and_next">SAVE AND NEXT</string>
    <string name="zero">000</string>
    <string name="bmi_status">Weight Status</string>

    //Strings for BMI status
    <string name="under_weight">Under Weight</string>
    <string name="healthy_weight">Healthy Weight</string>
    <string name="over_weight">Overweight</string>
    <string name="obese">Obese</string>

    //Days of the week
    <string name="sunday">Sunday</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>


    <string name="finish_training">Finish Training</string>
    <string name="today_training">Today Training</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
