<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradient"



    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/upper_menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        >

        <TextView
            android:id="@+id/myProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/my_profile"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:gravity="top"
            android:layout_gravity="center"
            android:layout_margin="15dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2"
            android:layout_marginBottom="15dp"

            >




            <RelativeLayout
                android:id="@+id/rightDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                >

                <TextView
                    android:id="@+id/dateOfBirth"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/date_of_birth"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:gravity="center_horizontal"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="5dp"
                    />

                <EditText
                    android:id="@+id/dateBirth"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/dd_mm_yyyy"
                    android:textColor="@color/darkGray"
                    android:textSize="18sp"
                    android:background="@drawable/round_corner_button"
                    android:layout_below="@id/dateOfBirth"
                    android:gravity="center"
                    android:padding="10dp" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/leftAge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                >
                <TextView
                    android:id="@+id/age"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/age"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:gravity="center_horizontal"
                    android:layout_marginBottom="5dp" />

                <TextView
                    android:id="@+id/userAge"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/darkGray"
                    android:textSize="18sp"
                    android:background="@drawable/round_corner_button"
                    android:layout_below="@id/age"
                    android:padding="10dp" />

            </RelativeLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2"
            android:layout_marginBottom="15dp"

            >

            <RelativeLayout
                android:id="@+id/rightHeight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                >

                <TextView
                    android:id="@+id/height"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/height"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:gravity="center_horizontal"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="5dp"
                    />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/height"
                    android:background="@drawable/round_corner_button"
                    android:gravity="center"
                    android:hint="000"
                    android:padding="10dp"
                    android:textColor="@color/darkGray"
                    android:textSize="18sp" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/leftWeight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                >
                <TextView
                    android:id="@+id/weight"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/weight"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:gravity="center_horizontal"
                    android:layout_marginBottom="5dp" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/darkGray"
                    android:textSize="18sp"
                    android:hint="000"
                    android:gravity="center"
                    android:background="@drawable/round_corner_button"
                    android:layout_below="@id/weight"
                    android:padding="10dp" />

            </RelativeLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_marginBottom="15dp"
            >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                >
                <TextView
                    android:id="@+id/bmi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bmi"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:gravity="center_horizontal"
                    android:layout_marginEnd="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="5dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:layout_toRightOf="@id/bmi"
                    />

            </RelativeLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/darkGray"
                android:textSize="18sp"
                android:gravity="center"
                android:background="@drawable/round_corner_button"
                android:layout_below="@id/bmi"
                android:padding="10dp" />


        </LinearLayout>




    </LinearLayout>
    <LinearLayout
        android:id="@+id/trainingLevel"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/white"
    android:layout_below="@id/upper_menu"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:text="@string/training_level"
        android:gravity="center"
        android:padding="15dp"
        />

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="horizontal"
        android:weightSum="2"
        >
        <Button
            android:id="@+id/beginner"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/round_corner_button_grey"
            android:textColor="@color/darkGray"
            android:textSize="15sp"
            android:text="@string/beginner"
            android:layout_weight="1"
            android:layout_marginLeft="30dp"
            android:layout_marginStart="30dp"
            android:layout_marginRight="15dp"
            android:layout_marginEnd="15dp"
            />
        <Button
            android:id="@+id/advanced"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/round_corner_button_grey"
            android:textColor="@color/darkGray"
            android:textSize="15sp"
            android:text="@string/advanced"
            android:layout_weight="1"

            android:layout_marginLeft="30dp"
            android:layout_marginStart="30dp"
            android:layout_marginRight="15dp"
            android:layout_marginEnd="15dp"
            />

    </LinearLayout>


</LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/white"
        android:layout_below="@id/trainingLevel"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:text="@string/preferences"
            android:gravity="center"
            android:padding="15dp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="horizontal"
            android:weightSum="2"
            >
            <Button
                android:id="@+id/abs"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@drawable/round_corner_button_grey"
                android:textColor="@color/darkGray"
                android:textSize="15sp"
                android:text="@string/abs"
                android:layout_weight="1"
                android:layout_marginLeft="30dp"
                android:layout_marginStart="30dp"
                android:layout_marginRight="15dp"
                android:layout_marginEnd="15dp"
                />
            <Button
                android:id="@+id/aerobics"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@drawable/round_corner_button_grey"
                android:textColor="@color/darkGray"
                android:textSize="15sp"
                android:text="@string/aerobics"
                android:layout_weight="1"

                android:layout_marginLeft="30dp"
                android:layout_marginStart="30dp"
                android:layout_marginRight="15dp"
                android:layout_marginEnd="15dp"
                />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="horizontal"
            android:weightSum="2"
            android:layout_marginTop="10dp"
            >
            <Button
                android:id="@+id/core"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@drawable/round_corner_button_grey"
                android:textColor="@color/darkGray"
                android:textSize="15sp"
                android:text="@string/core"
                android:layout_weight="1"
                android:layout_marginLeft="30dp"
                android:layout_marginStart="30dp"
                android:layout_marginRight="15dp"
                android:layout_marginEnd="15dp"
                />
            <Button
                android:id="@+id/fatLose"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@drawable/round_corner_button_grey"
                android:textColor="@color/darkGray"
                android:textSize="15sp"
                android:text="@string/fat_lose"
                android:layout_weight="1"

                android:layout_marginLeft="30dp"
                android:layout_marginStart="30dp"
                android:layout_marginRight="15dp"
                android:layout_marginEnd="15dp"
                />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="horizontal"
            android:weightSum="2"
            android:layout_marginTop="10dp"
            >
            <Button
                android:id="@+id/spinning"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@drawable/round_corner_button_grey"
                android:textColor="@color/darkGray"
                android:textSize="15sp"
                android:text="@string/spinning"
                android:layout_weight="1"
                android:layout_marginLeft="30dp"
                android:layout_marginStart="30dp"
                android:layout_marginRight="15dp"
                android:layout_marginEnd="15dp"
                />
            <Button
                android:id="@+id/trx"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@drawable/round_corner_button_grey"
                android:textColor="@color/darkGray"
                android:textSize="15sp"
                android:text="@string/trx"
                android:layout_weight="1"

                android:layout_marginLeft="30dp"
                android:layout_marginStart="30dp"
                android:layout_marginRight="15dp"
                android:layout_marginEnd="15dp"
                />

        </LinearLayout>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/gradient_button"
            android:text="@string/my_weekly_training"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="15dp"
            />



    </LinearLayout>


</RelativeLayout>